# precification_prediction

./: .dockerignore  Dockerfile  HOME.py  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
datasets/: df_price.csv  df_sale.csv
pages/: PRICE PREDICTION SOLUTION.py  SEASON_SALE_SOLUTION.py
pickle/: encoder_price.pickle  rxg_model.pickle  scaler_price.pickle  scaler_rf_sale.pickle  scaler_rxgc_sale.pickle
tests/: test_precification_prediction.py
