[tool.poetry]
name = "precification_prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.4.3"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
plotly = "^5.10.0"
xgboost = "^1.6.2"
yellowbrick = "^1.5"
scikit-learn = "^1.1.2"
scikit-plot = "^0.3.7"
streamlit = "^1.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
